--- a/desafios/desafios-modulo4/pacote-d013/estilo/style.css
+++ b/desafios/desafios-modulo4/pacote-d013/estilo/style.css
@@ -43,7 +43,9 @@ iframe#tela {
 }
 
 section#redes-sociais {
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 section#redes-sociais img {
@@ -52,6 +54,7 @@ section#redes-sociais img {
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.398);
     box-sizing: border-box;
+   
 }
 
 section#redes-sociais img:hover {
