--- a/exercicios-mod-4/ex003/mq005/estilos/style.css
+++ b/exercicios-mod-4/ex003/mq005/estilos/style.css
@@ -21,7 +21,7 @@ header > h1 {
 }
 
 menu {
-    display: block;
+    display: none;
 }
 
 menu > ul {
@@ -40,6 +40,20 @@ menu > ul > li > a  {
 
 menu > ul > li > a:hover {
     background-color: rgb(181, 179, 179);
+}
+
+#burguer {
+    display: block;
+    background-color: rgb(54, 54, 54);
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+#burguer:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
 }
 
 main {
